Wed Sep 11 23:19:17 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          In remove_association(), there may be fewer instance
          handles than rds_len.

        * dds/DCPS/Service_Participant.cpp:

          Minor update to the prior commit.

Wed Sep 11 14:26:27 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fixed problem where the quoted value of -ORB command line argument
          would be expanded before passed into ORB_init().

Wed Sep 11 00:46:49 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.inl:

          Use the transport's reactor for scheduled_delayed_release().
          This avoids a deadlock scenario where two threads running
          handle_timeout from different reactors each try to schedule/cancel
          timers on the other reactor.

Tue Sep 10 18:18:26 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          In remove_all_msgs(pub_id), check to see if any queue elements
          belonging to that publication are on the delayed notification list.
          If so, remove them from the list and invoke the usual callback when
          doing the removal.

Mon Sep  9 15:39:08 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/idl/CPPTemplate.txt:

          Fixed fuzz errors.

Thu Sep  5 18:47:10 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          Added lock to take() with AbstractSample interface to keep data from
          double deleting it's member pointers.
